cm4all-beng-proxy (0.3.2) unstable; urgency=low

  * processor: free memory before calling embed_frame_widget()
  * processor: allocate query string from the widget pool
  * parser: hold a reference to the pool

 --

cm4all-beng-proxy (0.3.1) unstable; urgency=low

  * http-client: remove Transfer-Encoding and Content-Length from response
    headers
  * http-client: don't read body after invoke_response()
  * fork: retry splice() after EAGAIN
  * fork: don't close input when splice() fails
  * cgi: abort the response handler when the stdin stream fails
  * istream_file, istream_pipe, fork, client_socket, listener: fixed file
    descriptor leaks
  * processor: hold a reference to the caller's pool
  * debian/rules: enabled test suite

 -- Max Kellermann <mk@cm4all.com>  Thu, 27 Nov 2008 16:01:16 +0100

cm4all-beng-proxy (0.3) unstable; urgency=low

  * implemented widget filters
  * translate: initialize all fields of a CGI address
  * fork: read request body on EAGAIN
  * fork: implemented the direct() method with splice()
  * python: added class Response
  * prototypes/translate.py:
    - support "filter"
    - support "content_type"
  * demo: added widget filter demo

 -- Max Kellermann <mk@cm4all.com>  Wed, 26 Nov 2008 16:27:29 +0100

cm4all-beng-proxy (0.2) unstable; urgency=low

  * don't quote text/xml widgets
  * widget-resolver: pass widget_pool to widget_class_lookup()
  * widget-registry: allocate widget_class from widget_pool
  * widget-stream: eliminated the async operation proxy, because the
    operation cannot be aborted before the constructor returns
  * widget-stream: don't clear the "delayed" stream in the response() callback
  * rewrite-uri: trigger istream_read(delayed) after istream_delayed_set()
  * doc: clarified XSLT integration

 -- Max Kellermann <mk@cm4all.com>  Tue, 25 Nov 2008 15:28:54 +0100

cm4all-beng-proxy (0.1) unstable; urgency=low

  * initial release

 -- Max Kellermann <mk@cm4all.com>  Mon, 17 Nov 2008 11:59:36 +0100