@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.3.2) unstable; urgency=low
 
   * processor: free memory before calling embed_frame_widget()
   * processor: allocate query string from the widget pool
+  * processor: removed the obsolete widget attributes "tag" and "style"
   * parser: hold a reference to the pool
 
  --
